tests/other-tests/tests/and_check/fail/invalid_macro_output.err.txt
error[E0277]: cannot add `&str` to `{integer}`
 --> /tests/and_check/fail/invalid_macro_output.rs:3:19
  |
3 |         let _ = 2 + "2";
  |                   ^ no implementation for `{integer} + &str`
...
8 |     produce_invalid_code!();
  |     ----------------------- in this macro invocation
  |
  = help: the trait `Add<&str>` is not implemented for `{integer}`
  = help: the following other types implement trait `Add<Rhs>`:
            `&f128` implements `Add<f128>`
            `&f128` implements `Add`
            `&f16` implements `Add<f16>`
            `&f16` implements `Add`
            `&f32` implements `Add<f32>`
            `&f32` implements `Add`
            `&f64` implements `Add<f64>`
            `&f64` implements `Add`
          and 56 others
  = note: this error originates in the macro `produce_invalid_code` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `<CRATE>` (bin "<BIN>") due to 1 previous error
